# OpenAgentLayer

./: .gitignore  .gitmodules  .rscheck.toml  .streamguardrc.json.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  INSTALLATION.md  Makefile  PLAN.md  README.md  SECURITY.md  biome.jsonc  build-plugin.ps1  build-plugin.sh  bump-version.sh  bunfig.toml  config.ps1  config.sh  install-online.sh  install.ps1  install.sh  jsconfig.json  package.json  tsconfig.base.json  tsconfig.json  uninstall.ps1  uninstall.sh  upstream-sources.lock.json  version.ps1  version.sh
.agents/: architecture.md  contracts.md
.claude-plugin/: marketplace.json  plugin.json
.codex/: architecture.md  contracts.md
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
agents/: architect.md  atalanta.md  athena.md  calliope.md  coder.md  hephaestus.md  hermes.md  implement.md  implementer.md  indexer.md  nemesis.md  odysseus.md  planner.md  reviewer.md  scribe.md  verifier.md  verify.md
claude/: CLAUDE.md
codex/: README.md
constraints/: max.md  pro.md  shared.md  zen.md
copilot/: README.md
crates/oal-cli/: Cargo.toml
crates/oal-cli/src/: args.rs  main.rs  output.rs  run.rs
crates/oal-cli/src/args/: tests.rs
crates/oal-core/: Cargo.toml
crates/oal-core/src/: error.rs  lib.rs  product.rs  source.rs  specs.rs  validation.rs
crates/oal-core/src/source/: contracts.rs  platform.rs  source_check.rs  tests.rs
crates/oal-core/src/specs/: catalog.rs  integrations.rs  models.rs  platform.rs  product.rs  runner.rs
crates/oal-runner/: Cargo.toml
crates/oal-runner/src/: backend.rs  intent.rs  lib.rs  main.rs  package.rs  plan.rs  risk.rs  summary.rs
crates/oal-runner/src/intent/: tests.rs
crates/oal-runner/src/plan/: tests.rs
crates/oal-runner/src/summary/: tests.rs
crates/opendex/: Cargo.toml  README.md
crates/opendex/src/: daemon.rs  error.rs  events.rs  guardrails.rs  json.rs  lib.rs  main.rs  persistence.rs  route_tests.rs  runtime.rs  store.rs  types.rs
crates/opendex/src/control_plane/: agents.rs  artifacts.rs  event_log.rs  mod.rs  projects.rs  runtime_state.rs  spawn_guardrails.rs
docs/: 00_EXECUTIVE_FINDINGS.md  00_INDEX.md  02-cli.md  (+41 more)
(+1291 files in other folders)
