[package]
name = "oal-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "oal"
path = "src/main.rs"

[dependencies]
oal-core = { path = "../oal-core" }
oal-runner = { path = "../oal-runner" }

[lints]
workspace = true
