[package]
name = "oal-runner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
oal-core = { path = "../oal-core" }
serde = { workspace = true }
toml = { workspace = true }

[lints]
workspace = true
