[package]
name = "opendex"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "opendex"
path = "src/lib.rs"

[[bin]]
name = "opendex"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.2", features = [
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
] }
